fixed the nav bar on tablet and phone view, corrected alignment of things

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,3 @@
-
-
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -286,68 +283,61 @@ footer {
 
 /* Desktop fist responsive design */
 
-
 /* Tablet max-width */
-@media(max-width: 800px){
-    .container {
-        max-width: 800px;
-        margin: 0 5%;
-    }
+@media (max-width: 800px) {
+  .container {
+    max-width: 800px;
+    margin: 0 5%;
+  }
 
-    header {
-        flex-direction: column;
-    }
-    
-    header nav {
-       width: 90%;
-        order: 2;
-    }
+  header {
+    flex-direction: column;
+  }
 
-    header nav a {
-        margin: auto;
-    }
+  header nav {
+    width: 90%;
+    order: 2;
+  }
 
-    .logo {
-        display: block;
-       
-        margin: auto;
-        order: -1;
-    }
+  header nav a {
+    margin: auto;
+  }
 
-    .cta {
-        display: block;
-    }
-    
-    .cta img {
-        display: none;
-        
-    }
+  .logo {
+    display: block;
+    margin: auto;
+    order: -1;
+  }
 
-    .top-content {
-        width: 90%;
-        margin: 5%;
-    }
+  .cta {
+    display: block;
+  }
 
-    .text-content {
-       
-    }
+  .cta img {
+    display: none;
+  }
 
-    .middle-img {
-        width: 90%;
-        margin: 5%;
-    }
+  .top-content {
+    width: 90%;
+    margin: 5% 0px;
+  }
 
-    .bottom-content {
-        width: 90%;
-        margin: 5%;
-    }
+  .middle-img {
+    width: 90%;
+    margin: 0;
+  }
+
+  .bottom-content {
+    width: 90%;
+    margin: 0;
+  }
 }
 
 /* Phone max-width */
-@media(max-width: 500px){
-  .container{
-      max-width: 500px;
-      margin: 0 5%;
+@media (max-width: 500px) {
+  .container {
+    max-width: 500px;
+    margin: 0 5%;
   }
 
   header {
@@ -356,47 +346,48 @@ footer {
   }
 
   header nav {
-    
+    margin: 0;
     flex-direction: column;
     align-items: center;
     order: 2;
   }
 
   header nav a {
-      margin: auto;
-      padding: 10px;
-      border-bottom: 1px solid black;
-      align-content: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    padding: 10px 90%;
+    border-bottom: 1px solid black;
+    align-items: center;
   }
- 
+
   header nav a:first-child {
-      margin: auto;
+    margin: 0;
+    border-top: 1px solid black;
   }
 
   header nav a:last-child {
-      margin: auto;
+    margin: 0;
   }
 
   .logo {
     display: block;
-    width: 20%;
+    padding-bottom: 20px;
     margin: auto;
-      order: 1;
-
+    order: 1;
   }
 
   .top-content {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   .top-content .text-content {
     width: 90%;
     margin: 20px 0px;
-
   }
 
   .bottom-content {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   .bottom-content .text-content {
